// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header render active for blogs 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        onClick={[Function]}
        replace={false}
        to="/"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <Search
          endSearch={[Function]}
          setSearchResults={[Function]}
        />
        <DocsLink
          className={false}
          onClick={[Function]}
        />
        <BlogLink
          className="is-active"
          onClick={[Function]}
        />
        <GithubLink
          className={null}
          githubURL={null}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`header renders githubURL 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        onClick={[Function]}
        replace={false}
        to="/"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <Search
          endSearch={[Function]}
          setSearchResults={[Function]}
        />
        <DocsLink
          className="is-active"
          onClick={[Function]}
        />
        <BlogLink
          className={false}
          onClick={[Function]}
        />
        <GithubLink
          className={null}
          githubURL="https://github.com/sindresorhus/cows"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`header renders logo 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        onClick={[Function]}
        replace={false}
        to="/"
      >
        <img
          alt="logo"
          className="navbar-item"
          src="https://github.com/sindresorhus/cows"
        />
        <span
          className="is-hidden-mobile navbar-item"
        />
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <Search
          endSearch={[Function]}
          setSearchResults={[Function]}
        />
        <DocsLink
          className="is-active"
          onClick={[Function]}
        />
        <BlogLink
          className={false}
          onClick={[Function]}
        />
        <GithubLink
          className={null}
          githubURL={null}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`header renders nav items 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        onClick={[Function]}
        replace={false}
        to="/"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <Search
          endSearch={[Function]}
          setSearchResults={[Function]}
        />
        <NavItem
          icon={null}
          item={
            Array [
              "root",
              "/",
            ]
          }
          location={
            Object {
              "hash": "",
              "pathname": "/",
              "search": "",
            }
          }
          navItems={
            Object {
              "Doc 1": "/",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          onClick={[Function]}
          setSearchResults={[Function]}
        />
        <NavItem
          icon={null}
          item={
            Array [
              "Doc 1",
              "/",
            ]
          }
          location={
            Object {
              "hash": "",
              "pathname": "/",
              "search": "",
            }
          }
          navItems={
            Object {
              "Doc 1": "/",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          onClick={[Function]}
          setSearchResults={[Function]}
        />
        <NavItem
          icon={null}
          item={
            Array [
              "Doc 2",
              "pages",
            ]
          }
          location={
            Object {
              "hash": "",
              "pathname": "/",
              "search": "",
            }
          }
          navItems={
            Object {
              "Doc 1": "/",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          onClick={[Function]}
          setSearchResults={[Function]}
        />
        <BlogLink
          className={false}
          onClick={[Function]}
        />
        <GithubLink
          className={null}
          githubURL={null}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`header renders nav items with just a index 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        onClick={[Function]}
        replace={false}
        to="/"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <Search
          endSearch={[Function]}
          setSearchResults={[Function]}
        />
        <NavItem
          icon={null}
          item={
            Array [
              "root",
              "/",
            ]
          }
          location={
            Object {
              "hash": "",
              "pathname": "/foo",
              "search": "",
            }
          }
          navItems={
            Object {
              "Doc 1": "other/index.md",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          onClick={[Function]}
          setSearchResults={[Function]}
        />
        <NavItem
          icon={null}
          item={
            Array [
              "Doc 1",
              "other/index.md",
            ]
          }
          location={
            Object {
              "hash": "",
              "pathname": "/foo",
              "search": "",
            }
          }
          navItems={
            Object {
              "Doc 1": "other/index.md",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          onClick={[Function]}
          setSearchResults={[Function]}
        />
        <NavItem
          icon={null}
          item={
            Array [
              "Doc 2",
              "pages",
            ]
          }
          location={
            Object {
              "hash": "",
              "pathname": "/foo",
              "search": "",
            }
          }
          navItems={
            Object {
              "Doc 1": "other/index.md",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          onClick={[Function]}
          setSearchResults={[Function]}
        />
        <BlogLink
          className={false}
          onClick={[Function]}
        />
        <GithubLink
          className={null}
          githubURL={null}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`header renders title 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        onClick={[Function]}
        replace={false}
        to="/"
      >
        <span
          className="is-hidden-mobile navbar-item"
        >
          Super Cool Docs
        </span>
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <Search
          endSearch={[Function]}
          setSearchResults={[Function]}
        />
        <DocsLink
          className="is-active"
          onClick={[Function]}
        />
        <BlogLink
          className={false}
          onClick={[Function]}
        />
        <GithubLink
          className={null}
          githubURL={null}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</nav>
`;
